--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,5 +16,9 @@
     .h3 {
       @apply text-[20px] xl:text-[24px] leading-[1.1] font-semibold;
     }
+    .nav-item {
+      @apply text-accent capitalize font-medium transition-all;
+    } 
+    
   }
     
