--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,24 +1,32 @@
+@import url('https://fonts.googleapis.com/css2?family=Calistoga&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-  
 
-  @layer base {
-    body {
-      @apply text-black leading-loose;
-    }
-    .h1 {
-      @apply text-[48px] xl:text-[80px] leading-[1.1] font-semibold;
-    }
-    .h2 {
-      @apply text-[36px] xl:text-[48px] leading-[1.1] font-semibold;
-    }
-    .h3 {
-      @apply text-[20px] xl:text-[24px] leading-[1.1] font-semibold;
-    }
-    .nav-item {
-      @apply text-accent capitalize font-medium transition-all;
-    } 
-    
+@layer base {
+  body {
+    @apply text-black leading-loose;
   }
-    
+
+  .h1 {
+    @apply text-[48px] xl:text-[80px] leading-[1.1] font-semibold;
+  }
+
+  .h2 {
+    @apply text-[36px] xl:text-[48px] leading-[1.1] font-semibold;
+  }
+
+  .h3 {
+    @apply text-[20px] xl:text-[24px] leading-[1.1] font-semibold;
+  }
+
+  .nav-item {
+    @apply text-accent capitalize font-medium transition-all;
+  }
+
+  /* Apply Lilita One Font */
+  .calistoga {
+    font-family: 'Calistoga', cursive;
+  }
+}
